--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,12 @@ navbar:
   right:
     - text: "About"
       href: about.html
-    - text: "Plotly"
-      href: plotly-and-flexdashboard.html
+    - text: Examples
+      menu:
+      - text: "Plotly"
+        href: plotly-and-flexdashboard.html
+      - text: "dashboard"
+        href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<xl2934@cumc.columbia.edu>
     - icon: fa-github fa-lg
